--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   image_picker: ^0.8.5+3
   http: ^0.13.5
   shared_preferences: ^2.0.0
+  dart_jsonwebtoken: ^2.0.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
